tested autmated  brute force decryption using nltk dictinary

--- a/Ceaser-Cipher/tests.ipynb
+++ b/Ceaser-Cipher/tests.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "4541763d",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ciphertext: Wkh#pruqlqj#vxqoljkw#ilowhuhg#wkurxjk#wkh#rog#rdn#ohdyhv/#fdvwlqj#gdqflqj#vkdgrzv#dfurvv#wkh#zhdwkhuhg#jdughq#sdwk1#Vdudk#sdxvhg#wr#dgpluh#wkh#zlogiorzhuv#wkdw#kdg#xqh{shfwhgo|#eorrphg#qhdu#wkh#ihqfh/#wkhlu#yleudqw#sxusoh#shwdov#vzd|lqj#jhqwo|#lq#wkh#frro#euhh}h1#Vkh#kdg#dozd|v#eholhyhg#wkdw#qdwxuh#kdg#d#zd|#ri#vxusulvlqj#wkrvh#zkr#wrrn#wlph#wr#wuxo|#revhuyh#lw1#Dv#vkh#zdonhg#ghhshu#lqwr#wkh#jdughq/#wkh#glvwdqw#vrxqg#ri#elugv#vlqjlqj#iloohg#khu#zlwk#d#vhqvh#ri#shdfh#wkdw#vkh#kdgq*w#ihow#lq#prqwkv/#uhplqglqj#khu#zk|#vkh#oryhg#wklv#sodfh#vr#pxfk1\n"
+      "Wkh#dxwrpdwhg#ghfu|swlrq#surfhvv#vxffhvvixoo|#lghqwlilhv#wkh#fruuhfw#vkliw#nh|#e|#frpsdulqj#wkh#uhvxowv#djdlqvw#d#vwdqgdug#Hqjolvk#glfwlrqdu|1#Krzhyhu/#li#wkh#wh{w#frqwdlqv#whfkqlfdo#mdujrq#olnh#*S|wkrq/*#*flskhuwh{w/*#ru#*fu|swrjudsk|/*#wkh#pdwfk#shufhqwdjh#pljkw#ioxfwxdwh1#Lw#lv#ylwdo#wr#vwuls#sxqfwxdwlrq‗vxfk#dv#frppdv/#shulrgv/#dqg#eudfnhwv‗wr#hqvxuh#wkdw#frpprq#zrugv#olnh#*surfhvv*#ru#*glfwlrqdu|*#duh#uhfrjql}hg#dffxudwho|1\n"
      ]
     }
    ],
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "id": "2afdb5a5",
    "metadata": {},
    "outputs": [
@@ -487,10 +487,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ghhshvk#Gdqjl#456#)8&75#54&\n",
-      "Fggrguj\"Fcpik\"345\"(7%64\"43%\n",
-      "Effqfti!Ebohj!234!'6$53!32$\n",
-      "Deepesh Dangi 123 &5#42 21#\n",
+      "Khoor#Krz#duh#|rxB\n",
+      "zhtmus#inmumlh#hmhml#zlhmlzhm#izh\n",
+      "Jgnnq\"Jqy\"ctg\"{qwA\tygsltr\"hmltlkg\"glglk\"ykglkygl\"hyg\n",
+      "Ifmmp!Ipx!bsf!zpvxfrksq!glkskjf!fkfkj!xjfkjxfk!gxf\n",
+      "Hello How are you?\u0007weqjrp fkjrjie ejeji wiejiwej fwe\n",
       "Key:  3\n"
      ]
     }
@@ -507,7 +508,7 @@
     "            decrypt_value  = (ord(char) - key) % 256\n",
     "            actualtext = chr(decrypt_value)\n",
     "            text.append(actualtext)\n",
-    "            s = \"\".join(text)\n",
+    "        s = \"\".join(text)\n",
     "    \n",
     "\n",
     "        print(s)\n",
@@ -531,31 +532,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "693f5845",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3985156392.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[5], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    path =\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key:  3\n",
+      "Hello How are you?\u0007what are you doing here \u0007how can i help you\u0007The automated decryption process successfully identifies the correct shift key by comparing the results against a standard English dictionary. However, if the text contains technical jargon like 'Python,' 'ciphertext,' or 'cryptography,' the match percentage might fluctuate. It is vital to strip punctuation\u0014such as commas, periods, and brackets\u0014to ensure that common words like 'process' or 'dictionary' are recognized accurately.\n",
+      "Percentage mtched:  77.14285714285715\n"
      ]
     }
    ],
    "source": [
-    "## without hum intervention match the string with dictionary , should be > 70% matching\n",
+    "## without human intervention match the string with dictionary , should be > 70% matching\n",
+    "import nltk\n",
+    "from nltk .corpus import words\n",
     "\n",
-    "import os \n",
+    "# nltk.download('words')\n",
+    "dictionary = set()\n",
     "\n",
-    "path = './ciphertext.txt'\n"
+    "for w in words.words():\n",
+    "    dictionary.add(w.lower())\n",
+    "\n",
+    "def bruteforce3(cipher_text):\n",
+    "\n",
+    "    for key in range(256):\n",
+    "        text = []\n",
+    "        for char in cipher_text:\n",
+    "            decrypt_value = (ord(char) - key) % 256\n",
+    "            decrypt_text = chr(decrypt_value)\n",
+    "            text.append(decrypt_text)\n",
+    "        s = \"\".join(text)\n",
+    "        # print(s)\n",
+    "        words = s.split()\n",
+    "           \n",
+    "        if not words:\n",
+    "            continue\n",
+    "    \n",
+    "        count = 0\n",
+    "        for word in words:\n",
+    "            clean_word = word.strip(\".,?!:;\\\"'()[]{}\").lower()\n",
+    "            if clean_word in dictionary:\n",
+    "                count = count + 1\n",
+    "    \n",
+    "        percent = count/len(words)\n",
+    "        if percent > 0.7:\n",
+    "            return key,percent,s\n",
+    "        # print(s)\n",
+    "    return None, 0, None\n",
+    "\n",
+    "path = './ciphertext.txt'\n",
+    "\n",
+    "with open(path, 'r') as f:\n",
+    "    cipher_text = f.read()\n",
+    "\n",
+    "r = bruteforce3(cipher_text)\n",
+    "if r[0] is not None:\n",
+    "    print(\"Key: \", r[0])\n",
+    "    print(r[2])\n",
+    "    print(\"Percentage mtched: \",r[1]*100)\n",
+    "else:\n",
+    "    print(\"Percent matching: \", r[1]*100)\n",
+    "    print(\"Key Not found\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a5e0384a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a854dd8",
    "metadata": {},
    "outputs": [],
    "source": []
