--- a/Ceaser-Cipher/tests.ipynb
+++ b/Ceaser-Cipher/tests.ipynb
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "693f5845",
    "metadata": {},
    "outputs": [
@@ -548,10 +548,19 @@
    ],
    "source": [
     "## without human intervention match the string with dictionary , should be > 70% matching\n",
-    "import nltk\n",
-    "from nltk .corpus import words\n",
+    "# import sys\n",
     "\n",
-    "# nltk.download('words')\n",
+    "# # Fix for \"partially initialized module 'nltk' has no attribute 'data'\"\n",
+    "# # This clears any broken NLTK imports from previous failed runs\n",
+    "# for key in list(sys.modules.keys()):\n",
+    "#     if key.startswith('nltk'):\n",
+    "#         del sys.modules[key]\n",
+    "\n",
+    "import nltk\n",
+    "\n",
+    "from nltk.corpus import words\n",
+    "\n",
+    "\n",
     "dictionary = set()\n",
     "\n",
     "for w in words.words():\n",
@@ -567,18 +576,18 @@
     "            text.append(decrypt_text)\n",
     "        s = \"\".join(text)\n",
     "        # print(s)\n",
-    "        words = s.split()\n",
+    "        words_found = s.split()\n",
     "           \n",
-    "        if not words:\n",
+    "        if not words_found:\n",
     "            continue\n",
     "    \n",
     "        count = 0\n",
-    "        for word in words:\n",
+    "        for word in words_found:\n",
     "            clean_word = word.strip(\".,?!:;\\\"'()[]{}\").lower()\n",
     "            if clean_word in dictionary:\n",
     "                count = count + 1\n",
     "    \n",
-    "        percent = count/len(words)\n",
+    "        percent = count/len(words_found)\n",
     "        if percent > 0.7:\n",
     "            return key,percent,s\n",
     "        # print(s)\n",
@@ -596,16 +605,87 @@
     "    print(\"Percentage mtched: \",r[1]*100)\n",
     "else:\n",
     "    print(\"Percent matching: \", r[1]*100)\n",
-    "    print(\"Key Not found\")\n"
+    "    print(\"Key Not found\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c883824",
+   "metadata": {},
+   "source": [
+    "Frequency Method attack on Ceaser Cipher"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a5e0384a",
+   "execution_count": 21,
+   "id": "526870c3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('#', 69), ('h', 41), ('w', 40), ('r', 31), ('d', 31), ('u', 29), ('l', 27), ('f', 27), ('v', 24), ('q', 22), ('k', 19), ('x', 14), ('o', 13), ('|', 13), ('g', 12), ('s', 12), ('*', 10), ('j', 9), ('p', 8), ('/', 6), ('z', 5), ('i', 5), ('n', 4), ('K', 3), ('\\n', 3), ('1', 3), ('e', 2), ('y', 2), ('{', 2), ('‗', 2), ('B', 1), ('W', 1), ('H', 1), ('m', 1), ('S', 1), ('L', 1), ('}', 1)]\n",
+      "Key:  3\n",
+      "Hello How are you?\u0007what are you doing here \u0007how can i help you\u0007The automated decryption process successfully identifies the correct shift key by comparing the results against a standard English dictionary. However, if the text contains technical jargon like 'Python,' 'ciphertext,' or 'cryptography,' the match percentage might fluctuate. It is vital to strip punctuation\u0014such as commas, periods, and brackets\u0014to ensure that common words like 'process' or 'dictionary' are recognized accurately.\n",
+      "Percentage matched:  77.14285714285715\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.corpus import words\n",
+    "from collections import Counter\n",
+    "# nltk.download('words')\n",
+    "\n",
+    "dictionary = set()\n",
+    "for w in words.words():\n",
+    "    dictionary.add(w.lower())\n",
+    "\n",
+    "\n",
+    "def frequency_analysis(cipher_text):\n",
+    "    frequency = Counter(cipher_text).most_common()\n",
+    "    return frequency\n",
+    "\n",
+    "s = frequency_analysis(cipher_text)\n",
+    "print(s)\n",
+    "most_common = [' ', 'e', 't', 'a', 'o', 'i']\n",
+    "\n",
+    "def frequency_based_decryption(cipher_text):\n",
+    "    for char in most_common:\n",
+    "        for key in range(256):\n",
+    "            text = []\n",
+    "            for c in cipher_text:\n",
+    "                decrypt_value = (ord(c) - key) % 256\n",
+    "                decrypt_text = chr(decrypt_value)\n",
+    "                text.append(decrypt_text)\n",
+    "            s = \"\".join(text)\n",
+    "            words = s.split()\n",
+    "            if not words:\n",
+    "                continue\n",
+    "            count = 0\n",
+    "            for word in words:\n",
+    "                clean_word = word.strip(\".,?!:;\\\"'()[]{}\").lower()\n",
+    "                if clean_word in dictionary:\n",
+    "                    count = count + 1\n",
+    "            \n",
+    "            percent = count / len(words)\n",
+    "            if percent > 0.5:\n",
+    "                return key, percent, s\n",
+    "        \n",
+    "        return None, 0, None\n",
+    "          \n",
+    "\n",
+    "result = frequency_based_decryption(cipher_text)\n",
+    "if result[0] is not None:\n",
+    "    print(\"Key: \", result[0])\n",
+    "    print(result[2])\n",
+    "    print(\"Percentage matched: \", result[1]*100)\n",
+    "else: \n",
+    "    print(\"Percentage matched: \", result[1]*100)\n",
+    "    print(\"Key Not found\")"
+   ]
   },
   {
    "cell_type": "code",
