--- a/PlayFair-Cipher/TestFile.ipynb
+++ b/PlayFair-Cipher/TestFile.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "868e1b19",
+   "execution_count": 5,
+   "id": "eccf33bd",
    "metadata": {},
    "outputs": [
     {
@@ -11,11 +11,37 @@
      "output_type": "stream",
      "text": [
       "Pairing letters: H, E\n",
+      "when a != b  HE\n",
+      "outside the if else condition:  HE\n",
+      "Positions: H(2,2), E(0,1)\n",
+      "Rectangle Rule Ciphertext:  GY\n",
+      "Pairing letters: H, E\n",
+      "when a != b  HEHE\n",
+      "outside the if else condition:  HEHE\n",
+      "Positions: H(2,2), E(0,1)\n",
+      "Rectangle Rule Ciphertext:  GY\n",
+      "Positions: H(2,2), E(0,1)\n",
+      "Rectangle Rule Ciphertext:  GYGY\n",
       "Pairing letters: L, L\n",
-      "HELX\n",
-      "Pairing letters: L, O\n",
-      "HELXLO\n",
-      "Encrypted: GYIZSC\n"
+      "when a == b  HEHELX\n",
+      "outside the if else condition:  HEHELX\n",
+      "Positions: H(2,2), E(0,1)\n",
+      "Rectangle Rule Ciphertext:  GY\n",
+      "Positions: H(2,2), E(0,1)\n",
+      "Rectangle Rule Ciphertext:  GYGY\n",
+      "Positions: L(2,4), X(4,3)\n",
+      "Rectangle Rule Ciphertext:  GYGYIZ\n",
+      "Pairing letters: O, X\n",
+      "when a != b  HEHELXOX\n",
+      "outside the if else condition:  HEHELXOX\n",
+      "Positions: H(2,2), E(0,1)\n",
+      "Rectangle Rule Ciphertext:  GY\n",
+      "Positions: H(2,2), E(0,1)\n",
+      "Rectangle Rule Ciphertext:  GYGY\n",
+      "Positions: L(2,4), X(4,3)\n",
+      "Rectangle Rule Ciphertext:  GYGYIZ\n",
+      "Positions: O(0,4), X(4,3)\n",
+      "Rectangle Rule Ciphertext:  GYGYIZWZ\n"
      ]
     }
    ],
@@ -26,61 +52,8 @@
     "            return r, row.index(char)\n",
     "    return None\n",
     "\n",
-    "def playfair_encrypt(matrix, plaintext):\n",
-    "    # Standardize text: Remove spaces, replace J with I, pair letters\n",
-    "    text = plaintext.upper().replace(\" \", \"\").replace(\"J\", \"I\")\n",
-    "    \n",
-    "    # Simple pairing logic: if identical letters or odd length, add an 'X'\n",
-    "    prepared_text = \"\"\n",
-    "    i = 0\n",
-    "    while i < len(text):\n",
-    "        a = text[i]\n",
-    "        b = text[i+1] if (i + 1) < len(text) else 'X'\n",
-    "        print(f\"Pairing letters: {a}, {b}\")\n",
-    "        if a == b:\n",
-    "            prepared_text += a + 'X'\n",
-    "            i += 1\n",
-    "            print(prepared_text)\n",
-    "        else:\n",
-    "            prepared_text += a + b\n",
-    "            i += 2\n",
-    "    print(prepared_text)\n",
-    "    ciphertext = \"\"\n",
-    "    for i in range(0, len(prepared_text), 2):\n",
-    "        row1, col1 = find_position(matrix, prepared_text[i])\n",
-    "        row2, col2 = find_position(matrix, prepared_text[i+1])\n",
     "\n",
-    "        if row1 == row2: # Same Row\n",
-    "            ciphertext += matrix[row1][(col1 + 1) % 5]\n",
-    "            ciphertext += matrix[row2][(col2 + 1) % 5]\n",
-    "        elif col1 == col2: # Same Column\n",
-    "            ciphertext += matrix[(row1 + 1) % 5][col1]\n",
-    "            ciphertext += matrix[(row2 + 1) % 5][col2]\n",
-    "        else: # Rectangle Rule\n",
-    "            ciphertext += matrix[row1][col2]\n",
-    "            ciphertext += matrix[row2][col1]\n",
     "\n",
-    "    return ciphertext\n",
-    "\n",
-    "# Example 5x5 Matrix (Key: \"KEYWORD\")\n",
-    "matrix = [\n",
-    "    ['K', 'E', 'Y', 'W', 'O'],\n",
-    "    ['R', 'D', 'A', 'B', 'C'],\n",
-    "    ['F', 'G', 'H', 'I', 'L'],\n",
-    "    ['M', 'N', 'P', 'Q', 'S'],\n",
-    "    ['T', 'U', 'V', 'X', 'Z']\n",
-    "]\n",
-    "\n",
-    "print(f\"Encrypted: {playfair_encrypt(matrix, 'HELLO')}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eccf33bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def playfair_encrypt(matrix, plaintext):\n",
     "    text = plaintext.upper().replace(\" \", \"\").replace(\"J\",\"I\")\n",
     "    prepared_text = \"\"\n",
@@ -104,7 +77,21 @@
     "\n",
     "        ciphertext = \"\"\n",
     "        for i in range(0, len(prepared_text) , 2):\n",
-    "            \n",
+    "            row1, col1 = find_position(matrix, prepared_text[i])\n",
+    "            row2, col2 = find_position(matrix , prepared_text[i+1])\n",
+    "            print(f\"Positions: {prepared_text[i]}({row1},{col1}), {prepared_text[i+1]}({row2},{col2})\")\n",
+    "            if row1 == row2:\n",
+    "                ciphertext= ciphertext + matrix[row1][(col1 + 1) % 5]\n",
+    "                ciphertext  = ciphertext + matrix[row1][(col2 + 1) % 5]\n",
+    "                print(\"Same Row Ciphertext: \",ciphertext)\n",
+    "            elif col1 == col2:\n",
+    "                ciphertext = ciphertext + matrix[(row1 + 1) %5][col1]\n",
+    "                ciphertext = ciphertext + matrix[(row2 + 1) %5][col1]\n",
+    "                print(\"Same Column Ciphertext: \",ciphertext)\n",
+    "            else:\n",
+    "                ciphertext = ciphertext + matrix[row1][col2]\n",
+    "                ciphertext = ciphertext + matrix[row2][col1]\n",
+    "                print(\"Rectangle Rule Ciphertext: \",ciphertext)\n",
     "\n",
     "\n",
     "matrix = [\n",
@@ -117,6 +104,14 @@
     "\n",
     "encryptied_text = playfair_encrypt(matrix, 'HELLO')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eff86879",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
