debug prints and update execution count

--- a/PlayFair-Cipher/TestFile.ipynb
+++ b/PlayFair-Cipher/TestFile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "eccf33bd",
    "metadata": {},
    "outputs": [
@@ -10,38 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pairing letters: H, E\n",
-      "when a != b  HE\n",
-      "outside the if else condition:  HE\n",
-      "Positions: H(2,2), E(0,1)\n",
-      "Rectangle Rule Ciphertext:  GY\n",
-      "Pairing letters: H, E\n",
-      "when a != b  HEHE\n",
-      "outside the if else condition:  HEHE\n",
-      "Positions: H(2,2), E(0,1)\n",
-      "Rectangle Rule Ciphertext:  GY\n",
-      "Positions: H(2,2), E(0,1)\n",
-      "Rectangle Rule Ciphertext:  GYGY\n",
-      "Pairing letters: L, L\n",
-      "when a == b  HEHELX\n",
-      "outside the if else condition:  HEHELX\n",
-      "Positions: H(2,2), E(0,1)\n",
-      "Rectangle Rule Ciphertext:  GY\n",
-      "Positions: H(2,2), E(0,1)\n",
-      "Rectangle Rule Ciphertext:  GYGY\n",
-      "Positions: L(2,4), X(4,3)\n",
-      "Rectangle Rule Ciphertext:  GYGYIZ\n",
-      "Pairing letters: O, X\n",
-      "when a != b  HEHELXOX\n",
-      "outside the if else condition:  HEHELXOX\n",
-      "Positions: H(2,2), E(0,1)\n",
-      "Rectangle Rule Ciphertext:  GY\n",
-      "Positions: H(2,2), E(0,1)\n",
-      "Rectangle Rule Ciphertext:  GYGY\n",
-      "Positions: L(2,4), X(4,3)\n",
-      "Rectangle Rule Ciphertext:  GYGYIZ\n",
-      "Positions: O(0,4), X(4,3)\n",
-      "Rectangle Rule Ciphertext:  GYGYIZWZ\n"
+      "Encrypted Text: GYGYIZWZ\n"
      ]
     }
    ],
@@ -64,36 +33,35 @@
     "            b = text[i+1]\n",
     "        else:\n",
     "            b = 'X'\n",
-    "        print(f\"Pairing letters: {a}, {b}\")\n",
+    "        # print(f\"Pairing letters: {a}, {b}\")\n",
     "        if a==b:\n",
     "            prepared_text = prepared_text + a + 'X'\n",
     "            i = i + 1\n",
-    "            print(\"when a == b \", prepared_text)\n",
+    "            # print(\"when a == b \", prepared_text)\n",
     "        else:\n",
     "            prepared_text = prepared_text + a + b\n",
     "            i = i +2\n",
-    "            print(\"when a != b \", prepared_text)\n",
-    "        print(\"outside the if else condition: \",prepared_text)\n",
+    "            # print(\"when a != b \", prepared_text)\n",
+    "        # print(\"outside the if else condition: \",prepared_text)\n",
     "\n",
     "        ciphertext = \"\"\n",
     "        for i in range(0, len(prepared_text) , 2):\n",
     "            row1, col1 = find_position(matrix, prepared_text[i])\n",
     "            row2, col2 = find_position(matrix , prepared_text[i+1])\n",
-    "            print(f\"Positions: {prepared_text[i]}({row1},{col1}), {prepared_text[i+1]}({row2},{col2})\")\n",
+    "            # print(f\"Positions: {prepared_text[i]}({row1},{col1}), {prepared_text[i+1]}({row2},{col2})\")\n",
     "            if row1 == row2:\n",
     "                ciphertext= ciphertext + matrix[row1][(col1 + 1) % 5]\n",
     "                ciphertext  = ciphertext + matrix[row1][(col2 + 1) % 5]\n",
-    "                print(\"Same Row Ciphertext: \",ciphertext)\n",
+    "                # print(\"Same Row Ciphertext: \",ciphertext)\n",
     "            elif col1 == col2:\n",
     "                ciphertext = ciphertext + matrix[(row1 + 1) %5][col1]\n",
     "                ciphertext = ciphertext + matrix[(row2 + 1) %5][col1]\n",
-    "                print(\"Same Column Ciphertext: \",ciphertext)\n",
+    "                # print(\"Same Column Ciphertext: \",ciphertext)\n",
     "            else:\n",
     "                ciphertext = ciphertext + matrix[row1][col2]\n",
     "                ciphertext = ciphertext + matrix[row2][col1]\n",
-    "                print(\"Rectangle Rule Ciphertext: \",ciphertext)\n",
-    "\n",
-    "\n",
+    "                # print(\"Rectangle Rule Ciphertext: \",ciphertext)\n",
+    "    return ciphertext\n",
     "matrix = [\n",
     "    ['K', 'E', 'Y', 'W', 'O'],\n",
     "    ['R', 'D', 'A', 'B', 'C'],\n",
@@ -102,7 +70,8 @@
     "    ['T', 'U', 'V', 'X', 'Z']\n",
     "]\n",
     "\n",
-    "encryptied_text = playfair_encrypt(matrix, 'HELLO')"
+    "encryptied_text = playfair_encrypt(matrix, 'HELLO')\n",
+    "print(\"Encrypted Text:\", encryptied_text)"
    ]
   },
   {
