update matrix creation and output formatting

--- a/PlayFair-Cipher/TestFile.ipynb
+++ b/PlayFair-Cipher/TestFile.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "e14c27be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "eccf33bd",
    "metadata": {},
    "outputs": [
@@ -10,7 +18,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Encrypted Text: GYGYIZWZ\n"
+      "['A', 'B', 'C', 'D', 'I']\n",
+      "Playfair Matrix: [['A', 'B', 'C', 'D', 'I'], ['E', 'F', 'G', 'H', 'K'], ['L', 'M', 'N', 'O', 'P'], ['Q', 'R', 'S', 'T', 'U'], ['V', 'W', 'X', 'Y', 'Z']]\n",
+      "Encrypted Text: KFKFNVNY\n"
      ]
     }
    ],
@@ -21,6 +31,24 @@
     "            return r, row.index(char)\n",
     "    return None\n",
     "\n",
+    "def create_matrix(key):\n",
+    "    key = key.upper().replace(\"j\", \"I\")\n",
+    "    alphabets = \"ABCDEFGHIKLMNOPQRSTUVWXYZ\"\n",
+    "    combined = []\n",
+    "\n",
+    "    for char in key:\n",
+    "        if char not in combined and char in alphabets:\n",
+    "            combined.append(char)\n",
+    "    print(combined)\n",
+    "\n",
+    "    for char in alphabets:\n",
+    "        if char not in combined:\n",
+    "            combined.append(char)\n",
+    "    \n",
+    "    matrix = []\n",
+    "    for i in range(0,25,5):\n",
+    "        matrix.append(combined[i:i+5])\n",
+    "    return matrix\n",
     "\n",
     "\n",
     "def playfair_encrypt(matrix, plaintext):\n",
@@ -62,13 +90,10 @@
     "                ciphertext = ciphertext + matrix[row2][col1]\n",
     "                # print(\"Rectangle Rule Ciphertext: \",ciphertext)\n",
     "    return ciphertext\n",
-    "matrix = [\n",
-    "    ['K', 'E', 'Y', 'W', 'O'],\n",
-    "    ['R', 'D', 'A', 'B', 'C'],\n",
-    "    ['F', 'G', 'H', 'I', 'L'],\n",
-    "    ['M', 'N', 'P', 'Q', 'S'],\n",
-    "    ['T', 'U', 'V', 'X', 'Z']\n",
-    "]\n",
+    "\n",
+    "key = input(\"Enter the key: \")\n",
+    "matrix = create_matrix(key)\n",
+    "print(\"Playfair Matrix:\", matrix)\n",
     "\n",
     "encryptied_text = playfair_encrypt(matrix, 'HELLO')\n",
     "print(\"Encrypted Text:\", encryptied_text)"
