Decryption implemetnation + bugs fixes in encryption process

--- a/PlayFair-Cipher/TestFile.ipynb
+++ b/PlayFair-Cipher/TestFile.ipynb
@@ -2,15 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e14c27be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "eccf33bd",
    "metadata": {},
    "outputs": [
@@ -18,9 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['A', 'B', 'C', 'D', 'I']\n",
-      "Playfair Matrix: [['A', 'B', 'C', 'D', 'I'], ['E', 'F', 'G', 'H', 'K'], ['L', 'M', 'N', 'O', 'P'], ['Q', 'R', 'S', 'T', 'U'], ['V', 'W', 'X', 'Y', 'Z']]\n",
-      "Encrypted Text: KFKFNVNY\n"
+      "Encrypted Text: GYIZSC\n"
      ]
     }
    ],
@@ -32,14 +22,14 @@
     "    return None\n",
     "\n",
     "def create_matrix(key):\n",
-    "    key = key.upper().replace(\"j\", \"I\")\n",
+    "    key = key.upper().replace(\"J\", \"I\")\n",
     "    alphabets = \"ABCDEFGHIKLMNOPQRSTUVWXYZ\"\n",
     "    combined = []\n",
     "\n",
     "    for char in key:\n",
     "        if char not in combined and char in alphabets:\n",
     "            combined.append(char)\n",
-    "    print(combined)\n",
+    "    # print(combined)\n",
     "\n",
     "    for char in alphabets:\n",
     "        if char not in combined:\n",
@@ -55,54 +45,120 @@
     "    text = plaintext.upper().replace(\" \", \"\").replace(\"J\",\"I\")\n",
     "    prepared_text = \"\"\n",
     "    i = 0\n",
-    "    while( i< len(text)):\n",
+    "    while i< len(text):\n",
     "        a = text[i]\n",
     "        if (i+1) < len(text):\n",
     "            b = text[i+1]\n",
+    "            if a==b:\n",
+    "                prepared_text = prepared_text + a + 'X'\n",
+    "                i = i + 1\n",
+    "            else:\n",
+    "                prepared_text = prepared_text + a + b\n",
+    "                i = i +2\n",
     "        else:\n",
-    "            b = 'X'\n",
-    "        # print(f\"Pairing letters: {a}, {b}\")\n",
-    "        if a==b:\n",
     "            prepared_text = prepared_text + a + 'X'\n",
     "            i = i + 1\n",
-    "            # print(\"when a == b \", prepared_text)\n",
-    "        else:\n",
-    "            prepared_text = prepared_text + a + b\n",
-    "            i = i +2\n",
-    "            # print(\"when a != b \", prepared_text)\n",
-    "        # print(\"outside the if else condition: \",prepared_text)\n",
+    "       \n",
     "\n",
-    "        ciphertext = \"\"\n",
-    "        for i in range(0, len(prepared_text) , 2):\n",
-    "            row1, col1 = find_position(matrix, prepared_text[i])\n",
-    "            row2, col2 = find_position(matrix , prepared_text[i+1])\n",
-    "            # print(f\"Positions: {prepared_text[i]}({row1},{col1}), {prepared_text[i+1]}({row2},{col2})\")\n",
-    "            if row1 == row2:\n",
-    "                ciphertext= ciphertext + matrix[row1][(col1 + 1) % 5]\n",
-    "                ciphertext  = ciphertext + matrix[row1][(col2 + 1) % 5]\n",
-    "                # print(\"Same Row Ciphertext: \",ciphertext)\n",
-    "            elif col1 == col2:\n",
-    "                ciphertext = ciphertext + matrix[(row1 + 1) %5][col1]\n",
-    "                ciphertext = ciphertext + matrix[(row2 + 1) %5][col1]\n",
-    "                # print(\"Same Column Ciphertext: \",ciphertext)\n",
-    "            else:\n",
-    "                ciphertext = ciphertext + matrix[row1][col2]\n",
-    "                ciphertext = ciphertext + matrix[row2][col1]\n",
-    "                # print(\"Rectangle Rule Ciphertext: \",ciphertext)\n",
+    "    ciphertext = \"\"\n",
+    "    for j in range(0, len(prepared_text) , 2):\n",
+    "        row1, col1 = find_position(matrix, prepared_text[j])\n",
+    "        row2, col2 = find_position(matrix , prepared_text[j+1])\n",
+    "\n",
+    "        if row1 == row2:\n",
+    "            ciphertext= ciphertext + matrix[row1][(col1 + 1) % 5]\n",
+    "            ciphertext  = ciphertext + matrix[row2][(col2 + 1) % 5]\n",
+    "\n",
+    "        elif col1 == col2:\n",
+    "            ciphertext = ciphertext + matrix[(row1 + 1) %5][col1]\n",
+    "            ciphertext = ciphertext + matrix[(row2 + 1) %5][col2]\n",
+    "\n",
+    "        else:\n",
+    "            ciphertext = ciphertext + matrix[row1][col2]\n",
+    "            ciphertext = ciphertext + matrix[row2][col1]\n",
     "    return ciphertext\n",
     "\n",
     "key = input(\"Enter the key: \")\n",
     "matrix = create_matrix(key)\n",
-    "print(\"Playfair Matrix:\", matrix)\n",
+    "# print(\"Playfair Matrix:\", matrix)\n",
     "\n",
     "encryptied_text = playfair_encrypt(matrix, 'HELLO')\n",
     "print(\"Encrypted Text:\", encryptied_text)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2fecee74",
+   "metadata": {},
+   "source": [
+    "Decryption of Play-Fair Cypher"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "eff86879",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decrypted text:  HELLO\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_matrix(key):\n",
+    "    key = key.upper().replace(\"J\", \"I\")\n",
+    "    alphabets = \"ABCDEFGHIKLMNOPQRSTUVWXYZ\"\n",
+    "    combined = []\n",
+    "\n",
+    "    for char in key:\n",
+    "        if char not in combined and char in alphabets:\n",
+    "            combined.append(char)\n",
+    "    for char in alphabets:\n",
+    "        if char not in combined:\n",
+    "            combined.append(char)\n",
+    "    matrix = []\n",
+    "    for i in range(0,25,5):\n",
+    "        matrix.append(combined[i: i+5])\n",
+    "    return matrix\n",
+    "\n",
+    "\n",
+    "def play_fair_decrypt(matrix, ciphertext):\n",
+    "    decrypt_text = \"\"\n",
+    "    for i in range(0, len(ciphertext), 2):\n",
+    "        row1, col1 = find_position(matrix, ciphertext[i])\n",
+    "        row2, col2 = find_position(matrix, ciphertext[i+1])\n",
+    "        if row1 == row2:\n",
+    "            decrypt_text = decrypt_text + matrix[row1][(col1 -1) % 5]\n",
+    "            decrypt_text = decrypt_text + matrix[row1][(col2 - 1) % 5]\n",
+    "        elif col1 == col2:\n",
+    "            decrypt_text = decrypt_text + matrix[(row1- 1)% 5][col1]\n",
+    "            decrypt_text = decrypt_text + matrix[(row2 - 1) % 5][col2]\n",
+    "        else:\n",
+    "            decrypt_text = decrypt_text + matrix[row1][col2]\n",
+    "            decrypt_text = decrypt_text + matrix[row2][col1]\n",
+    "    \n",
+    "    for char in decrypt_text:\n",
+    "        if char == 'X':\n",
+    "            decrypt_text = decrypt_text.replace(char, '')\n",
+    "    return decrypt_text\n",
+    "\n",
+    "\n",
+    "key = input(\"Enter the key for Decryption: \")\n",
+    "matrix = create_matrix(key)\n",
+    "\n",
+    "encrypted_text = \"GYIZSC\"\n",
+    "\n",
+    "print(\"Decrypted text: \", play_fair_decrypt(matrix, encrypted_text))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eff86879",
+   "id": "707de84b",
    "metadata": {},
    "outputs": [],
    "source": []
