--- a/text.ipynb
+++ b/text.ipynb
@@ -10,15 +10,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4d923caa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ciphertext:  Dhii e horndngIres g denIyafBc Cme ecn ien NTat.eeDnsusiI ro.ei ptSieaEgeia  gaapat I Tnuc nrtAl\n"
+     ]
+    }
+   ],
    "source": [
     "def railfence_encrypt(text, key):\n",
-    "    \n",
+    "    rail = []\n",
+    "    for j in range(key):\n",
+    "        row_placeholder = []\n",
+    "        for i in range(len(text)):\n",
+    "            row_placeholder.append('\\n')\n",
+    "        rail.append(row_placeholder)\n",
     "\n",
-    "text= \"Deepesh\"\n",
+    "    down = False\n",
+    "    row, col = 0, 0\n",
+    "\n",
+    "    for char in text:\n",
+    "        if row == 0 or row == key - 1:\n",
+    "            down = not down\n",
+    "        rail[row][col] = char\n",
+    "        col = col +  1\n",
+    "\n",
+    "        if down: \n",
+    "            row = row + 1\n",
+    "        else:\n",
+    "            row = row -1\n",
+    "    result = []\n",
+    "\n",
+    "    for i in range(key):\n",
+    "        for j in range(len(text)):\n",
+    "            if rail[i][j] != '\\n':\n",
+    "                result.append(rail[i][j])\n",
+    "    return(\"\" . join(result))\n",
+    "\n",
+    "\n",
+    "text= \"Deepesh Dangi studies in III year of B.Tech in Computer Science and Engineering at NIT Agartala.\"\n",
     "key = input(\"Enter the key: \")\n",
     "\n",
     "result = railfence_encrypt(text, int(key))\n",
