--- a/text.ipynb
+++ b/text.ipynb
@@ -66,6 +66,63 @@
    "id": "63ce3eb4",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#DECRYPTION FUNCTION\n",
+    "\n",
+    "def railfence_decrypt(cipher, key):\n",
+    "    rail = []\n",
+    "    for j in range(key):\n",
+    "        row_placeholder = []\n",
+    "        for i in range(len(cipher)):\n",
+    "            row_placeholder.append('\\n')\n",
+    "        rail.append(row_placeholder)\n",
+    "    down = None\n",
+    "    row, col = 0, 0\n",
+    "    \n",
+    "    for i in range(len(cipher)):\n",
+    "        if row == 0:\n",
+    "            down = True\n",
+    "        if row == key - 1:\n",
+    "            down = False\n",
+    "        rail[row][col] = '*'\n",
+    "        col += 1\n",
+    "        if down:\n",
+    "            row += 1\n",
+    "        else:\n",
+    "            row -= 1\n",
+    "    \n",
+    "    index = 0\n",
+    "    for i in range(key):\n",
+    "        for j in range(len(cipher)):\n",
+    "            if rail[i][j] == '*' and index < len(cipher):\n",
+    "                rail[i][j] = cipher[index]\n",
+    "                index += 1\n",
+    "    \n",
+    "    result = []\n",
+    "    row, col = 0, 0\n",
+    "    for i in range(len(cipher)):\n",
+    "        if row == 0:\n",
+    "            down = True\n",
+    "        if row == key - 1:\n",
+    "            down = False\n",
+    "        if rail[row][col] != '*':\n",
+    "            result.append(rail[row][col])\n",
+    "            col += 1\n",
+    "        if down:\n",
+    "            row += 1\n",
+    "        else:\n",
+    "            row -= 1\n",
+    "    \n",
+    "    return \"\".join(result)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84b00db4",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
