fix output formatting and update execution counts for encryption and decryption functions

--- a/text.ipynb
+++ b/text.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "4d923caa",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ciphertext:  Dhii e horndngIres g denIyafBc Cme ecn ien NTat.eeDnsusiI ro.ei ptSieaEgeia  gaapat I Tnuc nrtAl\n"
+      "Ciphertext:  DeDius  r eiotSnaEniaIgaeps ag tde nIIya fBTc nCmue cec n niern tNTAatl.ehnsiiIeo.h priedgeg  ra\n"
      ]
     }
    ],
@@ -62,10 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "63ce3eb4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decrypted Text:  Deepesh Dangi studies in III year of B.Tech in Computer Science and Engineering at NIT Agartala.\n"
+     ]
+    }
+   ],
    "source": [
     "#DECRYPTION FUNCTION\n",
     "\n",
@@ -114,6 +122,9 @@
     "            row -= 1\n",
     "    \n",
     "    return \"\".join(result)\n",
+    "\n",
+    "result_decrypt = railfence_decrypt(result, int(key))\n",
+    "print(\"Decrypted Text: \", result_decrypt)\n",
     "\n"
    ]
   },
